# Rocket-REST-Quickstart

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml  requests.http
.github/workflows/: general.yml
migrations/2022-01-31-223507_create_problems/: down.sql  up.sql
migrations/2022-02-22-194047_create_problems/: up.sql
migrations/2022-03-02-185422_create_users/: up.sql
migrations/2022-03-13-191242_create_problems/: up.sql
scripts/: init_db.sh  test.sh
src/: auth.rs  config.rs  configuration.rs  connection.rs  database.rs  lib.rs  main.rs  schema.rs  startup.rs
src/database/: mod.rs  users.rs
src/db/: mod.rs  problems.rs
src/models/: problem.rs  user.rs
src/routes/: health_check.rs  mod.rs  problems.rs  users.rs
tests/: common.rs  health_check.rs  problems.rs  users.rs
tests/api/: health_check.rs  helpers.rs  main.rs  problems.rs  users.rs
tests/common/: mod.rs
