[package]
name = "rocket_pg_template"
version = "0.1.0"
edition = "2021"

readme = "README.md"

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json", "secrets"] }
dotenv = "0.15.0"
diesel = { version = "1.4.5", features = ["postgres", "chrono"] }
diesel_migrations = "1.4.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
chrono = { version = "0.4.19", features = ["serde"] }
env_logger = "0.9.0"
log = "0.4.14"
validator = "0.14.0"
once_cell = "1.9.0"
argon2 = "0.3"
rand_core = { version = "0.6", features = ["std"] }

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_postgres_pool"]
