[package]
name = "rocket_rest_quickstart"
version = "0.1.0"
edition = "2021"
readme = "README.md"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rocket_rest_quickstart"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json", "secrets"] }
dotenv = "0.15.0"
diesel = { version = "1.4.5", features = ["postgres", "chrono"] }
diesel_migrations = "1.4.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
chrono = { version = "0.4.19", features = ["serde"] }
argon2 = {version = "0.4.0", features= ["std"]}
rand_core = { version = "0.6", features = ["std"] }
validator = "0.15"
thiserror = "1"
anyhow = "1.0"
uuid = { version = "1", features = ["v4"] }

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.2"
default-features = false
features = ["diesel_postgres_pool"]

[dev-dependencies]
once_cell = "1"
